--- a/test.ipynb
+++ b/test.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,9 +130,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Flow\\AppData\\Local\\Temp\\ipykernel_22644\\835237206.py:22: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\happyelements\\AppData\\Local\\Temp\\ipykernel_6912\\835237206.py:22: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  edits_loaded = torch.load(os.path.join(args.exp_dir, args.edits_exp,\n",
-      "C:\\Users\\Flow\\AppData\\Local\\Temp\\ipykernel_22644\\835237206.py:43: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\happyelements\\AppData\\Local\\Temp\\ipykernel_6912\\835237206.py:43: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  lg_loaded = torch.load(os.path.join(args.exp_dir, args.lg_exp,\n"
      ]
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
      "output_type": "stream",
      "text": [
       "{'config': {'n_atom_feat': 98, 'n_bond_feat': 6, 'n_bin_feat': 11, 'rnn_type': 'gru', 'mpn_size': 256, 'mlp_size': 512, 'depth': 10, 'bias': False, 'edit_loss': 'sigmoid', 'bs_outdim': 5, 'bond_label_feat': 109, 'dropout_mlp': 0.3, 'dropout_mpn': 0.15, 'pos_weight': 5.0}, 'encoder_name': 'GraphFeatEncoder', 'toggles': {'use_attn': False, 'use_h_labels': True, 'use_prod': True, 'use_nei': False, 'propagate_logits': True}}\n",
-      "{'config': {'rnn_type': 'gru', 'mpn_size': 300, 'mlp_size': 300, 'depth': 10, 'bias': False, 'embed_size': 200, 'dropout_mlp': 0.3, 'dropout_mpn': 0.15, 'n_mt_blocks': 2, 'n_atom_feat': 98, 'n_bond_feat': 6, 'n_heads': 4, 'embed_bias': False}, 'lg_vocab': <seq_graph_retro.molgraph.vocab.Vocab object at 0x0000025194439C70>, 'encoder_name': 'GraphFeatEncoder', 'toggles': {'use_attn': False, 'use_prev_pred': True, 'use_rxn_class': False}}\n",
+      "{'config': {'rnn_type': 'gru', 'mpn_size': 300, 'mlp_size': 300, 'depth': 10, 'bias': False, 'embed_size': 200, 'dropout_mlp': 0.3, 'dropout_mpn': 0.15, 'n_mt_blocks': 2, 'n_atom_feat': 98, 'n_bond_feat': 6, 'n_heads': 4, 'embed_bias': False}, 'lg_vocab': <seq_graph_retro.molgraph.vocab.Vocab object at 0x000002847A0BCD30>, 'encoder_name': 'GraphFeatEncoder', 'toggles': {'use_attn': False, 'use_prev_pred': True, 'use_rxn_class': False}}\n",
       "{'use_attn': False, 'use_prev_pred': True, 'use_rxn_class': False}\n"
      ]
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -959,23 +959,6 @@
     "    'O=C1[C@@](C#C)(C)CCCC1',\n",
     "    'O[C@@H]1CC[C@@](C2)([C@@H](O)CC3(C)C)[C@H]3CC[C@]21C']\n",
     "\n",
-    "# def run_search(self, prod_smi, max_steps=6, rxn_class=None):\n",
-    "#     with torch.no_grad():\n",
-    "#         node_list = self.run_edit_step(prod_smi, rxn_class=rxn_class)\n",
-    "#         new_node_list = [copy_node(node) for node in node_list]\n",
-    "#         steps = 0\n",
-    "\n",
-    "#         new_node_list = [self._create_lg_node(prod_smi, node, rxn_class=rxn_class) for node in new_node_list]\n",
-    "\n",
-    "#         while not check_nodes_complete(new_node_list) and steps <= max_steps:\n",
-    "#             tmp_list = self.run_lg_step(prod_smi, new_node_list)\n",
-    "#             new_node_list = [copy_node(node) for node in tmp_list]\n",
-    "#             steps += 1\n",
-    "\n",
-    "#     new_node_list = self.keep_topk_nodes(new_node_list)\n",
-    "#     return new_node_list\n",
-    "\n",
-    "\n",
     "def check_nodes_complete(node_list):\n",
     "    for node in node_list:\n",
     "        if not node.node_complete:\n",
@@ -991,7 +974,6 @@
     "    mol=Chem.MolFromSmiles(p)\n",
     "    img = Draw.MolToImage(mol)\n",
     "    display(img)\n",
-    "\n",
     "\n",
     "    node_list=beam_model.run_edit_step(p)\n",
     "    print('模型预测的断键：',node_list[0].edit)    \n",
@@ -1045,31 +1027,6 @@
     "mol=[Chem.MolFromSmiles(s) for s in rxn]\n",
     "img=Draw.MolsToGridImage(mol, molsPerRow=3, subImgSize=(300, 300),legends=[\"product\" if i % 6 == 0 else \"reactant\" for i in range(len(rxn))])\n",
     "display(img)\n",
-    "\n",
-    "\n",
-    "    # top_k_nodes = beam_model.run_search(p, max_steps=6) #进行束搜索，beam_size=10\n",
-    "    # for beam_idx, node in enumerate(top_k_nodes):\n",
-    "    #     pred_edit = node.edit\n",
-    "    #     pred_label = node.lg_groups\n",
-    "\n",
-    "    #     if isinstance(pred_edit, list): #检查pre_edit是否为一个列表，如果是，执行下面语句\n",
-    "    #         pred_edit = pred_edit[0]\n",
-    "\n",
-    "    #     print(beam_idx,\"图编辑网络的预测结果：\",pred_edit,\"  离去基团的标签预测结果\",pred_label)\n",
-    "\n",
-    "    #     #自己设置断键地点\n",
-    "    #     pred_edit='17:18:1.0:0.0'\n",
-    "    #     try:\n",
-    "    #         pred_set = generate_reac_set(p, pred_edit, pred_label, verbose=False)\n",
-    "    #     except BaseException as e:\n",
-    "    #         print(e, flush=True)\n",
-    "    #         pred_set = None\n",
-    "    #     pred_list=list(pred_set)\n",
-    "    #     print(pred_list)\n",
-    "    #     if pred_list:\n",
-    "    #         pred_mol=[Chem.MolFromSmiles(s) for s in pred_list]\n",
-    "    #         img = Draw.MolsToGridImage(pred_mol, molsPerRow=5, subImgSize=(200, 200),legends=[f\"{i}\" for i in range(len(pred_list))])\n",
-    "    #         display(img) \n",
     "\n"
    ]
   }
